Implement class file reader and add basic skeleton for VM

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.28)
 project(geevm)
 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 23)
 
 include(FetchContent)
 
@@ -15,9 +15,15 @@ file(GLOB_RECURSE
   src/class_file/*.cpp
 )
 
+file(GLOB_RECURSE
+  GEEVM_VM_SOURCES
+  src/vm/*.cpp
+)
+
 set(GEEVM_SOURCES
   ${GEEVM_COMMON_SOURCES}
   ${GEEVM_CLASS_FILE_SOURCES}
+  ${GEEVM_VM_SOURCES}
 )
 
 add_library(geevm ${GEEVM_SOURCES})
@@ -25,3 +31,7 @@ add_library(geevm ${GEEVM_SOURCES})
 target_include_directories(geevm PUBLIC src)
 
 add_subdirectory(src/unit_tests)
+
+add_executable(java src/bin/java.cpp)
+target_link_libraries(java geevm)
+target_include_directories(java PUBLIC src)
