--- a/src/unit_tests/CMakeLists.txt
+++ b/src/unit_tests/CMakeLists.txt
@@ -1,3 +1,5 @@
+enable_testing()
+
 # Load GoogleTest
 FetchContent_Declare(
   gtest
@@ -9,7 +11,7 @@ set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(gtest)
 include(GoogleTest)
 
-set(TEST_SOURCES ClassFileReaderTest.cpp)
+set(TEST_SOURCES ClassFileReaderTest.cpp DescriptorTest.cpp)
 add_executable(geevm_test ${TEST_SOURCES})
 
 set(GEEVM_UNIT_TEST_FIXTURES_DIR ${CMAKE_SOURCE_DIR}/tests)
