--- a/tests/programs/CMakeLists.txt
+++ b/tests/programs/CMakeLists.txt
@@ -1,8 +1,6 @@
-add_custom_target(check DEPENDS java)
-
-add_custom_command(
-  TARGET check
-  COMMAND ../run_tests.py
-  ARGS --geevm-binary-dir=${CMAKE_BINARY_DIR}
+add_custom_target(
+  check
+  DEPENDS java
+  COMMAND ../run_tests.py --geevm-binary-dir=${CMAKE_BINARY_DIR}
   WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}
 )
