--- a/tests/lit.site.cfg.py.in
+++ b/tests/lit.site.cfg.py.in
@@ -1,5 +1,6 @@
 config.binary_dir = r'@CMAKE_BINARY_DIR@'
 config.source_dir = r'@CMAKE_SOURCE_DIR@'
 config.java_home = r'@JAVA_HOME@'
+config.jdk17_dir = r'@CMAKE_BINARY_DIR@/jdk17/java.base'
 
 lit_config.load_config(config, os.path.join(config.source_dir, "tests/lit.cfg.py"))
