--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Configure
         run: >
-          cmake -Gninja -Bbuild
+          cmake -GNinja -Bbuild
             -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
             -DCMAKE_CXX_COMPILER=${{ matrix.cxx_compiler }}
             -S ${{ github.workspace }}
