--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
           sudo apt install libzip-dev zipcmp zipmerge ziptool ninja-build
 
       - name: Configure
-        run: |
+        run: >
           cmake -GNinja -Bbuild
             -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
             -DCMAKE_CXX_COMPILER=${{ matrix.cxx_compiler }} 
