--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,5 +41,6 @@ jobs:
           cmake --build build
 
       - name: Test
-        working-directory: ${{github.workspace}}
-        run: ctest --extra-verbose
+        working-directory: ${{github.workspace}}/build
+        run: ctest --extra-verbose --output-on-failure
+
