--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,14 +23,20 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: 3.12
+
       - uses: actions/setup-java@v4
         with:
           java-version: 17
           distribution: 'oracle'
+
       - name: Setup build dependencies
         run: |
           sudo apt update
-          sudo apt install libzip-dev zipcmp zipmerge ziptool ninja-build
+          sudo apt install libzip-dev zipcmp zipmerge ziptool ninja-build llvm
+
+      - name: Setup Python environment
+        run:
+          pip install -r requirements.txt
 
       - name: Configure
         run: >
