--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,7 @@ jobs:
           sudo apt update
           sudo apt install libzip-dev zipcmp zipmerge ziptool ninja-build llvm
           sudo ln -s /usr/lib/llvm-18/bin/FileCheck /usr/bin/FileCheck
+          sudo ln -s /usr/lib/llvm-18/bin/split-file /usr/bin/split-file
 
       - name: Setup Python environment
         run:
