--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ ubuntu-24.04 ]
-        build_type: [ Debug ]
+        build_type: [ Debug, Release ]
         cxx_compiler: [ g++ ]
 
     steps:
@@ -51,4 +51,3 @@ jobs:
       - name: Test
         working-directory: ${{github.workspace}}/build
         run: ctest --extra-verbose --output-on-failure
-
