Prevent the linker from removing libjava

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,4 +63,5 @@ target_link_libraries(geevm ffi)
 add_executable(java src/bin/java.cpp)
 target_link_libraries(java geevm)
 target_link_libraries(java geevm-libjava)
+target_link_options(java PRIVATE "-Wl,--no-as-needed")
 target_include_directories(java PUBLIC src)
