--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,11 @@ jobs:
         os: [ ubuntu-24.04 ]
         build_type: [ Debug, Release ]
         cxx_compiler: [ g++ ]
-
+        include:
+          - os: ubuntu-24.04
+            build_type: Debug
+            sanitizers: -fsanitize=address,undefined
+    
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -42,7 +46,8 @@ jobs:
 
       - name: Configure
         run: >
-          cmake -GNinja -Bbuild -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DCMAKE_CXX_COMPILER=${{ matrix.cxx_compiler }} -S ${{ github.workspace }}
+          cmake -GNinja -Bbuild -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DCMAKE_CXX_COMPILER=${{ matrix.cxx_compiler }}
+          -DCMAKE_CXX_FLAGS=${{ matrix.sanitizers }} -S ${{ github.workspace }}
 
       - name: Build
         run: |
