[VM] Verify String/Throwable class layouts using tests instead of run-time checks

--- a/src/unit_tests/CMakeLists.txt
+++ b/src/unit_tests/CMakeLists.txt
@@ -9,12 +9,14 @@ set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(gtest)
 include(GoogleTest)
 
-set(TEST_SOURCES ClassFileReaderTest.cpp DescriptorTest.cpp GarbageCollectorTest.cpp EncodingTest.cpp)
+set(TEST_SOURCES ClassFileReaderTest.cpp DescriptorTest.cpp GarbageCollectorTest.cpp EncodingTest.cpp InstanceTest.cpp)
 add_executable(geevm_test ${TEST_SOURCES})
 
 set(GEEVM_UNIT_TEST_FIXTURES_DIR ${CMAKE_SOURCE_DIR}/tests)
+set(GEEVM_UNIT_TEST_JDK17_PATH ${CMAKE_BINARY_DIR}/lib)
 
 target_compile_definitions(geevm_test PRIVATE GEEVM_UNIT_TEST_FIXTURES_DIR="${GEEVM_UNIT_TEST_FIXTURES_DIR}")
+target_compile_definitions(geevm_test PRIVATE GEEVM_UNIT_TEST_JDK17_PATH="${GEEVM_UNIT_TEST_JDK17_PATH}")
 target_include_directories(geevm_test PRIVATE ${CMAKE_SOURCE_DIR}/src)
 
 target_link_libraries(geevm_test gmock_main geevm)
