--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,6 +47,7 @@ jobs:
 
       - name: Configure
         run: >
+          cmake --version
           cmake -GNinja -Bbuild -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DCMAKE_CXX_COMPILER=${{ matrix.cxx_compiler }}
           -DCMAKE_CXX_FLAGS=${{ matrix.sanitizers }} -S ${{ github.workspace }}
 
